Tests/function_tests.h

// This is a basic test of the ability of h2m
// to translate functions. All of these should
// compile without complaint.

struct simple {
  int a;
};
struct simple* return_struct_pointer();