Tests/correct_output_compiled.f90


MODULE module_unrecongized_type
USE, INTRINSIC :: iso_c_binding
implicit none
! Found illegal type.
! TYPE, BIND(C) :: my_void_type
!     WARNING_UNRECOGNIZED(void)::my_void_type_WARNING_UNRECOGNIZED(void)
! END TYPE my_void_type
! Found illegal type.
! TYPE(h2m__va_list_tag), public, BIND(C) :: my_list(10, 1)
! Found illegal type.
! TYPE, BIND(C) :: va_list
!     TYPE(h2m__va_list_tag)::va_list_h2m__va_list_tag
! END TYPE va_list
! Found illegal type.
! TYPE(h2m__va_list_tag), public, BIND(C) :: my_va_list(1)
! Found illegal type.
! TYPE, BIND(C) :: my_struct
!     TYPE(h2m__va_list_tag) :: illegal(1)
! END TYPE my_struct
INTERFACE
! Found illegal type.
! INTEGER(C_INT) FUNCTION get_stuff(my_list) BIND(C)
!     USE iso_c_binding, only: C_INT
!     import
!     TYPE(h2m__va_list_tag), DIMENSION(1) :: my_list
! END FUNCTION get_stuff
! 
! Found illegal type.
! SUBROUTINE get_stuff2(my_list) BIND(C)
!     USE iso_c_binding
!     import
!     TYPE(h2m__va_list_tag), DIMENSION(*) :: my_list
! END SUBROUTINE get_stuff2
! 
END INTERFACE
END MODULE module_unrecongized_type
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_variable_tests
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_INT), public, BIND(C) :: x
INTEGER(C_SHORT), public, BIND(C) :: my_short
INTEGER(C_LONG_LONG), public, BIND(C) :: my_long_long
INTEGER(C_SHORT), public, BIND(C) :: stuff(5, 5)
REAL(C_FLOAT), public, BIND(C) :: m
REAL(C_LONG_DOUBLE), public, BIND(C) :: not_my_stuff(10, 2)
REAL(C_DOUBLE), parameter, public :: y = 3.145000e+00
TYPE(C_PTR), public, BIND(C) :: z
TYPE(C_PTR), public, BIND(C) :: z2 !&x
TYPE(C_FUNPTR), public, BIND(C) :: function_pointer
! Found duplicate identifier.
! INTEGER(C_SHORT), public, BIND(C) :: my_short
INTEGER(C_LONG), public, BIND(C) :: my_long
CHARACTER(C_CHAR), parameter, public :: my_char = 'a'
CHARACTER(C_CHAR), public, BIND(C) :: my_car
END MODULE module_variable_tests
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_macro_suffixes
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_LONG_LONG), parameter, public :: my_long_long = 10000000000
INTEGER(C_LONG_LONG), parameter, public :: my_u_long_long = 10000000000
REAL(C_FLOAT), parameter, public :: my_float = 25
REAL(C_LONG_DOUBLE), parameter, public :: exp_check = .0075e5
! Found unrecognized macro.
! bad_exp .045e3E4
REAL(C_FLOAT), parameter, public :: my_other_float = 90
REAL(C_LONG_DOUBLE), parameter, public :: my_long_float = 100000000.0
! Found unrecognized macro.
! my_illegal_float 1000.0LL
! Found unrecognized macro.
! my_illegal_float_2 10000.5fL
INTEGER(C_INT), parameter, public :: my_int_parens = -5
REAL(C_FLOAT), parameter, public :: my_float_parens = -45.4
INTEGER(C_LONG), parameter, public :: my_hex = Z'ff03b'
INTEGER(C_INT), parameter, public :: my_hex_u = Z'ff02bf'
INTEGER(C_INT), parameter, public :: my_oct_u = O'234'
INTEGER(C_LONG_LONG), parameter, public :: my_oct_l_l = O'424235'
INTEGER(C_LONG), parameter, public :: my_bin_l = B'0101'
INTEGER(C_INT), parameter, public :: my_bin_u = B'0101'
INTEGER(C_INT), parameter, public :: my_bin_u_paren = B'1010'
INTEGER(C_INT), parameter, public :: my_bin_paren = B'1010'
! Found unrecognized macro.
! illegal_1 343uu
! Found unrecognized macro.
! illegal_2 432LLLu
! Found unrecognized macro.
! illegal_3 0452lLuU
! Found unrecognized macro.
! illegal_4 343.0ff
! Found unrecognized macro.
! illegal_5 3420fL
END MODULE module_macro_suffixes
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_minitest
USE, INTRINSIC :: iso_c_binding
implicit none
INTEGER(C_INT), parameter, public :: bin_per = B'0110'
END MODULE module_minitest
! The following Fortran code was generated by the h2m-AutoFortran Tool.
! See the h2m README file for credits and help information.

MODULE module_mini
USE, INTRINSIC :: iso_c_binding
implicit none
! struct without fields may cause warnings
TYPE, BIND(C) :: simple
END TYPE simple
TYPE, BIND(C) :: mine
    INTEGER(C_INT) :: y
    REAL(C_DOUBLE) :: x
    CHARACTER(C_CHAR) :: z
END TYPE mine
! Found bad variable translation.
! TYPE(mine), public, BIND(C) :: my_unicorn
INTERFACE
TYPE(C_PTR) FUNCTION return_struct_pointer() BIND(C)
    USE iso_c_binding, only: C_PTR
    import
END FUNCTION return_struct_pointer

END INTERFACE
END MODULE module_mini
